Updated list of publications
Signed-off-by: Rodrigo Navarro Perez <rnavarroperez@sdsu.edu>

--- a/src/publications.tex
+++ b/src/publications.tex
@@ -4,7 +4,7 @@
   \section{<Full list of publications|Lista completa de publicaciones>}
   
   \subsection{<Journal papers|Artículos en revistas>}
-  \biblist{prc20b,prc20a,epja20,plb19,prc18a,prc18,jpg17,prc17b,cpc17,prc17a,prc17,jpg16,ijmpe16,prc15b,prc15a,prd15,prc15,jpg15,prc14c,plb14,prc14b,prc14a,prc13b,prc13a,plb13,arXiv12}
+  \biblist{plb21, arXiv20, prc20b,prc20a,epja20,plb19,prc18a,prc18,jpg17,prc17b,cpc17,prc17a,prc17,jpg16,ijmpe16,prc15b,prc15a,prd15,prc15,jpg15,prc14c,plb14,prc14b,prc14a,prc13b,prc13a,plb13,arXiv12}
   
   \subsection{<Conference Proceedings|Contribuciones a conferencias>}
   \biblist{jpcs19,hadron17,epj16a,mpla16,fair16,epj16,fbs13b,fbs13a,cd12,fbs12,qnp12,ppnp12,ssnp08} 
