--- a/src/rodrigo.bib
+++ b/src/rodrigo.bib
@@ -1,3 +1,28 @@
+@article{arXiv20,
+    author = "Guevara, Adolfo and Navarro Pérez, Rodrigo and Ruiz Arriola, Enrique",
+    title = "{Partial wave correlations with uncertainties in the Two Nucleon System}",
+    eprint = "2010.03885",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    month = "10",
+    year = "2020",
+    url = "https://arxiv.org/abs/2010.03885",
+}
+
+
+
+@article{plb21,
+  title = {Insight into the Reaction Dynamics of Proton Drip-Line Nuclear System {{17F}}+{{58Ni}} at near-Barrier Energies},
+  author = {Yang, L. and Lin, C. J. and Yamaguchi, H. and Lei, Jin and Wen, P. W. and Mazzocco, M. and Ma, N. R. and Sun, L. J. and Wang, D. X. and Zhang, G. X. and Abe, K. and Cha, S. M. and Chae, K. Y. and Diaz-Torres, A. and Ferreira, J. L. and Hayakawa, S. and Jia, H. M. and Kahl, D. and Kim, A. and Kwag, M. S. and La Commara, M. and Navarro Pérez, R. and Parascandolo, C. and Pierroutsakou, D. and Rangel, J. and Sakaguchi, Y. and Signorini, C. and Strano, E. and Xu, X. X. and Yang, F. and Yang, Y. Y. and Zhang, G. L. and Zhong, F. P. and Lubian, J.},
+  date = {2021-02-10},
+  journaltitle = {Physics Letters B},
+  volume = {813},
+  pages = {136045},
+  issn = {0370-2693},
+  doi = {10.1016/j.physletb.2020.136045},
+  langid = {english}
+}
+
 @article{prc20a,
     author = "Fox, Jordan M.R. and Johnson, Calvin W. and Navarro Perez, Rodrigo",
     title = "{Uncertainty quantification of an empirical shell-model interaction using principal component analysis}",
