Started updating CV
Signed-off-by: Rodrigo Navarro Perez <rnavarroperez@sdsu.edu>

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -138,6 +138,22 @@
 %}{}
 
 \section{<Prizes and awards|Premios y reconocimientos>}
+
+\award{
+  date = {2021},
+  title = {Outstanding Faculty in Physics},
+  institution = {San Diego State University, College of Sciences},
+  address = {<USA|EEUU>},
+}
+
+
+\award{
+  date = {2020},
+  title = {Faculty Forward Award},
+  institution = {San Diego State University},
+  address = {<USA|EEUU>},
+}
+
 \award{
   date = {2016},
   title = {<Finalist|Finalista>: Research Slam},
@@ -261,6 +277,22 @@
 \section{<Invited talks|Conferencias invitadas>}
 
 \entry{
+  date = {<Nov|November> 2019},
+  title = {Gogny 2019: Microscopic Approaches to Nuclear Structure and Reactions},
+  address = {Livermore, CA <USA|EEUU>},
+  description = {
+    \f{<Title|Título>} ``Recent developments in Microscopically Constrained EDFs'' }
+}
+
+\entry{
+  date = {<Jan|Enero> 2019},
+  title = {42nd Symposium on Nuclear Physics},
+  address = {Cocoyoc, Mexico},
+  description = {
+    \f{<Title|Título>} ``Microscopically based energy density functionals for nuclei using the density matrix expansion'' }
+}
+
+\entry{
   date = {<Oct|Octubre> 2018},
   title = {Joint Meeting of the APS Division of Nuclear Physics and the Physical Society of Japan},
   address = {Waikoloa, HI <USA|EEUU>},
@@ -274,6 +306,14 @@
   address = {San Diego, CA <USA|EEUU>},
   description = {
     \f{<Title|Título>} ``Precision nuclear physics: Uncertainty Quantification in the supercomputing era'' }
+}
+
+\entry{
+  date = {<Jan|Enero> 2017},
+  title = {Workshop on The tower of effective (field) theories and the emergence of nuclear phenomena},
+  address = {Saclay <France|Francia>},
+  description = {
+    \f{<Title|Título>} ``Error quantification and falsification of chiral-EFT interactions'' }
 }
 
 \entry{
@@ -330,6 +370,12 @@
  \committee{
    date = {2015--2016},
    venue = {IJMPE: International Journal of Modern Physics E},
+ }
+
+ \subsection{<Research grant proposal reviewing|Evaluador externo de projectos de investigación>}
+ \committee{
+   date = {2020},
+   venue = {DOE Office of Science Graduate Student Research Program}
  }
  
 \subsection{<Member of program committee|Miembro del comité del programa>}
