Finished updating CV
Signed-off-by: Rodrigo Navarro Perez <rnavarroperez@sdsu.edu>

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -137,6 +137,18 @@
 %  \biblist{aplas13,pldi11,cav09}
 %}{}
 
+\section{<Externally funded projects|Proyectos con financiaión externa>}
+
+\entry{
+  date = {2021--2023},
+  title = {HADRONS: Helping Amplify Diversity and Research Opportunities in Nuclear Sciences},
+  institution = {<Department of Energy| Departamento de Energía>},
+  address = {<USA|EEUU>},
+  description = {
+    \f{<Amount|Presupuesto>} \$200,000<|USD>/2 <years|años>
+  },
+}
+
 \section{<Prizes and awards|Premios y reconocimientos>}
 
 \award{
@@ -243,27 +255,99 @@
 %  institution = {QMUL},
 %}
 
-%\section{<Academic advising|Asesoría académica>}
+\section{<Academic advising|Asesoría académica>}
 
-%\subsection{<Interns|Becarios>}
+\subsection{<Thesis supervising|Supervisión de tesis>}
 
-%\student{
-%  date = {2013},
-%  name = {Victor Popescu},
-%  project = {Extending a Theorem Prover for Separation Logic},
-%  host = {UCL}
-%}
+\thesis{
+ date = {2019},
+ title = {Improving Nuclear Mass Predictions Using Machine Learning Algorithms},
+ author = {Garret Gallear},
+ degree = {<M.S. in Physics|Máster en Física>},
+ institution = {San Diego State University},
+ address = {<USA|EEUU>},
+}
 
-%\subsection{<Thesis reviewing|Evaluación de tesis>}
+\subsection{<Undergraduate research supervision|Supervisión de investigación estudiantil a nivel licenciatura>}
 
-%\thesis{
-%  date = {2009},
-%  title = {Fundamentos Matemáticos de la Semántica P-estable en Programación Lógica},
-%  author = {José Luis Carballido},
-%  degree = {<Doctor in Mathematics|Doctor en Matemáticas>},
-%  institution = {Benemérita Universidad Autónoma de Puebla},
-%  address = {<Mexico|México>},
-%}
+\student{
+ date = {<Since|Desde> 2021},
+ name = {Marielle Duran},
+ project = {Monte Carlo Sampling of phenomenological nuclear interactions},
+ host = {San Diego State University}
+}
+
+\student{
+ date = {2020--2021},
+ name = {Juan Ortiz},
+ project = {Gaussian Process emulation of experimental Nucleon-Nucleon scattering data},
+ host = {San Diego State University}
+}
+
+\student{
+ date = {2020},
+ name = {Raul Bernal-Gonzales},
+ project = {Re-implementation of the AV18 potential with updated scattering data and uncertainties},
+ host = {San Diego State University}
+}
+
+\student{
+ date = {Since 2019},
+ name = {Matthew Crowley},
+ project = {Quantification of systematic uncertainty in Nuclear DFT predictions with Random Forests},
+ host = {San Diego State University}
+}
+
+\student{
+ date = {2019--2020},
+ name = {Steven Bradley},
+ project = {Model independent Nucleon-Nucleon scattering amplitudes using Random Forests},
+ host = {San Diego State University}
+}
+
+\student{
+ date = {2018--2019},
+ name = {Diego Fernández del Val},
+ project = {Optical Potential model for analyzing elastic scattering data of tightly bound nuclei},
+ host = {San Diego State University}
+}
+
+
+\subsection{<Thesis reviewing|Evaluación de tesis>}
+
+\thesis{
+ date = {2021},
+ title = {Time-series and phasecurve photometry of episodically-active asteroid (6479) Gault in a quiescent state},
+ author = {Josiah Nicholas Purdum},
+ degree = {<Master of Science in Astronomy|Máster en Ciencias en Astronomía>},
+ institution = {San Diego State University},
+ address = {<USA|EEUU>},
+}
+
+\subsection{<PhD qualifying exam committee|Miembro del comité de examen de candidatura>}
+
+\student{
+ date = {<May|Mayo> 2021},
+ name = {Stephanie Lauber},
+ project = {Benchmarking projected Hartree-Fock as an approximation},
+ host = {San Diego State University}
+}
+
+\student{
+ date = {<March|Marzo> 2021},
+ name = {Oliver Gorton},
+ project = {Advanced nuclear shell-model calculations for basic and applied science},
+ host = {San Diego State University}
+}
+
+
+\student{
+ date = {<May|Mayo> 2020},
+ name = {Jordan Fox},
+ project = {Uncertainty quantification of an empirical shell-model interaction using principal component analysis},
+ host = {San Diego State University}
+}
+
 
 %\thesis{
 %  date = {2009},
@@ -378,6 +462,18 @@
    venue = {DOE Office of Science Graduate Student Research Program}
  }
  
+\subsection{<Diversity, equity and inclusion efforts|Esfuerzos para la diversidad, equidad e inclusión>}
+
+ \committee{
+   date = {since 2020},
+   venue = {<SDSU College of Sciences Diversity and Inclusion committee member|Miembro del comité de Diversidad en Inclusión de la escuela de ciencias en SDSU> }
+ }
+
+ \committee{
+   date = {since 2019},
+   venue = {<Academic mentor in the Cal-Bridge program|Mentor académico en el programa Cal-Bridge> }
+ }
+
 \subsection{<Member of program committee|Miembro del comité del programa>}
 
 \committee{
@@ -407,6 +503,13 @@
 %  }
 
 \section{<Volunteer work|Trabajo voluntario>}
+
+  \entry{
+    date = {2018},
+    title = {<Judge|Juez>},
+    organisation = {<Distric Science Day|Día de la Ciencia>},
+    address = {Ohio University, <USA|EEUU> }
+  } 
 
   \entry{
     date = {2007},
