Updated to blue color and added Usha as reference

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -606,6 +606,15 @@
 \section{<References|Referencias>}
 
 \reference{
+  name = {Usha Sinha},
+  institution = {<Physics Department|
+                  Departamento de Física>. San Diego State University},
+  address = {550 Campanile Drive, San Diego CA-92182, <USA|EEUU>},
+  phone = {+1~(619)~594~6240},
+  email = {usinha@sdsu.edu},
+}
+
+\reference{
   name = {Charlotte Elster},
   institution = {<Physics and Astronomy Department|
                   Departamento de Física y Astronomía>. Ohio University},
@@ -624,14 +633,14 @@
 }
 
 
-\reference{
-  name = {Enrique Ruiz Arriola},
-  institution = {<Atomic, Molecular and Nuclear Physics Department. University of Granada|
-                  Departamento de Física Atómica Molecular y Nuclear. Universidad de Granada>},
-  address = {Av. Fuentenueva S/N. 18001 Granada, <Spain|España>},
-  phone = {+34~(958)~246~170},
-  email = {earriola@ugr.es},
-}
+% \reference{
+%   name = {Enrique Ruiz Arriola},
+%   institution = {<Atomic, Molecular and Nuclear Physics Department. University of Granada|
+%                   Departamento de Física Atómica Molecular y Nuclear. Universidad de Granada>},
+%   address = {Av. Fuentenueva S/N. 18001 Granada, <Spain|España>},
+%   phone = {+34~(958)~246~170},
+%   email = {earriola@ugr.es},
+% }
 
 %% \reference{
 %%   name = {José Enrique Amaro Soriano},
