--- a/src/ezcv-classic.sty
+++ b/src/ezcv-classic.sty
@@ -4,7 +4,7 @@
 \RequirePackage{eztemplates}
 \RequirePackage{biblatex}
 \moderncvstyle{classic}
-\moderncvcolor{red}
+\moderncvcolor{blue}
 
 % adjust the page margins
 \usepackage[margin=2cm]{geometry}
