Updated with latest publications and research

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -271,7 +271,21 @@
 \subsection{<Undergraduate research supervision|Supervisión de investigación estudiantil a nivel licenciatura>}
 
 \student{
- date = {<Since|Desde> 2021},
+ date = {since 2021},
+ name = {Ky Putnam},
+ project = {Uncertaintiy Quantification in local Chiral interactions},
+ host = {San Diego State University}
+}
+
+\student{
+ date = {since 2021},
+ name = {Nathaniel Saavedra},
+ project = {Statistical Analysis of Stable Nuclei Collision},
+ host = {San Diego State University}
+}
+
+\student{
+ date = {2021},
  name = {Marielle Duran},
  project = {Monte Carlo Sampling of phenomenological nuclear interactions},
  host = {San Diego State University}
@@ -361,7 +375,16 @@
 \section{<Invited talks|Conferencias invitadas>}
 
 \entry{
-  date = {<Nov|November> 2019},
+  date = {<Sept|Septiembre> 2019},
+  title = {Human Side of Science Distinguished Speaker Series at University of San Diego},
+  address = {San Diego, CA <USA|EEUU>},
+  description = {
+    \f{<Title|Título>} ``Uncertainty Quantification in the supercomputing era'' }
+}
+
+
+\entry{
+  date = {<Nov|Noviembre> 2019},
   title = {Gogny 2019: Microscopic Approaches to Nuclear Structure and Reactions},
   address = {Livermore, CA <USA|EEUU>},
   description = {
@@ -458,11 +481,21 @@
 
  \subsection{<Research grant proposal reviewing|Evaluador externo de projectos de investigación>}
  \committee{
+   date = {2021},
+   venue = {Swiss National Science Foundation}
+ }
+ 
+ \committee{
    date = {2020},
    venue = {DOE Office of Science Graduate Student Research Program}
  }
  
 \subsection{<Diversity, equity and inclusion efforts|Esfuerzos para la diversidad, equidad e inclusión>}
+ \committee{
+   date = {since 2021},
+   venue = {<Member of the Cal-Bridge Partnership committee|Miembro del comité de Asociación del programa Cal-Bridge> }
+ }
+
 
  \committee{
    date = {since 2020},
