--- a/src/rodrigo.bib
+++ b/src/rodrigo.bib
@@ -1,14 +1,39 @@
-@article{arXiv20,
-    author = "Guevara, Adolfo and Navarro Pérez, Rodrigo and Ruiz Arriola, Enrique",
-    title = "{Partial wave correlations with uncertainties in the Two Nucleon System}",
+@article{arXiv21,
+    author = "Marevic, P. and Schunck, N. and Ney, E. M. and P\'erez, R. Navarro and Verriere, M. and O'Neal, J.",
+    title = "{Axially-deformed solution of the Skyrme-Hartree-Fock-Bogoliubov equations using the transformed harmonic oscillator basis (IV) hfbtho (v4.0): A new version of the program}",
+    month = "10",
+    year = "2021",
+    url = "https://arxiv.org/abs/2110.06424",
+    eprint = "2110.06424",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+}
+
+@article{arXiv12,
+      author         = "Navarro P\'erez, R. and Amaro, J. E. and Ruiz Arriola, E.",
+      title          = "{Error estimates on Nuclear Binding Energies from
+                        Nucleon-Nucleon uncertainties}",
+      year           = "2012",
+      url            = "http://arxiv.org/abs/1202.6624",
+      eprint         = "1202.6624",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1202.6624;%%",
+}
+
+@article{prc21,
+    author = "Escalante, Adolfo Guevara and Navarro P\'erez, Rodrigo and Ruiz Arriola, Enrique",
+    title = "{Partial-wave correlations with uncertainties in the two-nucleon system}",
     eprint = "2010.03885",
     archivePrefix = "arXiv",
     primaryClass = "nucl-th",
-    month = "10",
-    year = "2020",
-    url = "https://arxiv.org/abs/2010.03885",
+    doi = "10.1103/PhysRevC.104.054002",
+    journal = "Phys. Rev. C",
+    volume = "104",
+    number = "5",
+    pages = "054002",
+    year = "2021"
 }
-
 
 
 @article{plb21,
